NetBSD Problem Report #55000

From tsutsui@ceres.dti.ne.jp  Sat Feb 22 02:58:16 2020
Return-Path: <tsutsui@ceres.dti.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id EC8DC1A9213
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 22 Feb 2020 02:58:15 +0000 (UTC)
Message-Id: <202002220258.01M2w5Kk016037@ceres.dti.ne.jp>
Date: Sat, 22 Feb 2020 11:58:05 +0900 (JST)
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
Reply-To: tsutsui@ceres.dti.ne.jp
To: gnats-bugs@NetBSD.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: NetBSD-9.0-amd64-uefi-install.img doesn't boot on Panasonic CF-NX3
X-Send-Pr-Version: 3.95

>Number:         55000
>Category:       port-amd64
>Synopsis:       NetBSD-9.0-amd64-uefi-install.img doesn't boot on Panasonic CF-NX3
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    port-amd64-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Feb 22 03:00:01 +0000 2020
>Closed-Date:    Wed Mar 18 17:38:39 +0000 2020
>Last-Modified:  Wed Mar 18 17:38:39 +0000 2020
>Originator:     Izumi Tsutsui
>Release:        NetBSD 9.0
>Organization:
>Environment:
System: NetBSD mirage 9.0 NetBSD 9.0 (GENERIC) #0: Fri Feb 14 00:06:28 UTC 2020 mkrepro@mkrepro.NetBSD.org:/usr/src/sys/arch/i386/compile/GENERIC i386
Architecture: i386
Machine: i386
>Description:
NetBSD-9.0-amd64-uefi-install.img doesn't boot on Panasonic Let's Note
CF-NX3. The boot menu appears, but after the boot menu screen is cleared
a cursor is printed at left-top and nothing proceeds.

Note NetBSD-9.0_RC1-amd64-uefi-install.img worked, and replacing
EFI/bootx64.efi with 9.0_RC1 one also makes the image boot again.

dmesg (with 9.0_RC1 bootx64.uefi) is here:
 https://dmesgd.nycbug.org/index.cgi?do=view&id=5383
 (haudio0 errors are unstable btw)

>How-To-Repeat:
Boot NetBSD-9.0-amd64-uefi-install.img on CF-NX3 in UEFI mode.

>Fix:
No idea.

The machine (which has 1600x900 LCD) doesn't like the following commits
after 9.0_RC1?

 http://cvsweb.netbsd.org/bsdweb.cgi/src/sys/arch/i386/stand/efiboot/eficons.c#rev1.6.6.3
 http://cvsweb.netbsd.org/bsdweb.cgi/src/sys/arch/i386/stand/efiboot/eficons.c#rev1.6.6.2
 http://cvsweb.netbsd.org/bsdweb.cgi/src/sys/arch/i386/stand/efiboot/efiboot.c#rev1.10.2.2

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: port-amd64/55000: NetBSD-9.0-amd64-uefi-install.img doesn't boot
 on Panasonic CF-NX3
Date: Sat, 22 Feb 2020 07:11:54 +0100

 Can you show the output of the "gop" command with the non-working bootloader?

 Martin

From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: martin@duskware.de, gnats-bugs@netbsd.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Re: port-amd64/55000: NetBSD-9.0-amd64-uefi-install.img doesn't booton
	 Panasonic CF-NX3
Date: Sat, 22 Feb 2020 18:12:32 +0900

 >  Can you show the output of the "gop" command with the non-working bootloader?

 Unfortunately(?) it says:
 ---
 > gop
 *0: 800x600 BGRR pitch 800 bpp 32
  1: 1600x900 BGRR pitch 1600 bpp 32
 ---

 So it conflicts with this commit:
 http://cvsweb.netbsd.org/bsdweb.cgi/src/sys/arch/i386/stand/efiboot/eficons.c#rev1.6.6.3
 >> Use 1024x768 as the default GOP mode. It is the only option available for
 >> Hyper-V Gen.2 VMs and it seems to be the de facto standard and part of
 >> WHQL requirements.

 ---
 Izumi Tsutsui

From: "Jared D. McNeill" <jmcneill@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55000 CVS commit: src/sys/arch/i386/stand/efiboot
Date: Sat, 22 Feb 2020 09:34:26 +0000

 Module Name:	src
 Committed By:	jmcneill
 Date:		Sat Feb 22 09:34:26 UTC 2020

 Modified Files:
 	src/sys/arch/i386/stand/efiboot: eficons.c

 Log Message:
 If the default GOP mode is unavailable, fallback to the first mode defined.
 PR# port-amd64/55000


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/sys/arch/i386/stand/efiboot/eficons.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: jmcneill@NetBSD.org
State-Changed-When: Sat, 22 Feb 2020 09:35:41 +0000
State-Changed-Why:
Please try eficons.c r1.10


From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: jmcneill@NetBSD.org, gnats-bugs@netbsd.org
Cc: tsutsui@ceres.dti.ne.jp
Subject: Re: port-amd64/55000 (NetBSD-9.0-amd64-uefi-install.img doesn't boot
	 on Panasonic CF-NX3)
Date: Sat, 22 Feb 2020 18:53:41 +0900

 > Please try eficons.c r1.10

 It works, thanks.

 However I wonder if it'd be better to check both "1024x768" and "800x600"
 because the second (bestmode == -1) conditional seems dead:

 ---
 	INT32 bestmode = -1;
 	UINTN sz;

 	if (efi_gop_mode >= 0) {
 		bestmode = efi_gop_mode;
 	} else {
 		/* If a mode has not been selected, choose a default */
 		bestmode = efi_find_gop_mode(DEFAULT_GOP_MODE);
 		if (bestmode == -1)
 			bestmode = FALLBACK_GOP_MODE;
 	}
 	if (bestmode == -1)
 		goto nofb;

 ---
 Izumi Tsustui

State-Changed-From-To: feedback->needs-pullups
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Sun, 23 Feb 2020 01:00:25 +0000
State-Changed-Why:
The check for bestmode==-1 was removed in eficons.c rev 1.11:
 https://mail-index.netbsd.org/source-changes/2020/02/22/msg114253.html


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55000 CVS commit: [netbsd-9] src/sys/arch/i386/stand/efiboot
Date: Tue, 25 Feb 2020 19:25:19 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Feb 25 19:25:19 UTC 2020

 Modified Files:
 	src/sys/arch/i386/stand/efiboot [netbsd-9]: eficons.c

 Log Message:
 Pull up following revision(s) (requested by jmcneill in ticket #723):

 	sys/arch/i386/stand/efiboot/eficons.c: revision 1.10
 	sys/arch/i386/stand/efiboot/eficons.c: revision 1.11

 If the default GOP mode is unavailable, fallback to the first mode defined.
 PR# port-amd64/55000

 Remove check for bestmode==-1 (shouldn't happen)


 To generate a diff of this commit:
 cvs rdiff -u -r1.6.6.3 -r1.6.6.4 src/sys/arch/i386/stand/efiboot/eficons.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/55000 CVS commit: [netbsd-8] src/sys/arch/i386/stand/efiboot
Date: Mon, 9 Mar 2020 09:48:00 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Mon Mar  9 09:48:00 UTC 2020

 Modified Files:
 	src/sys/arch/i386/stand/efiboot [netbsd-8]: eficons.c

 Log Message:
 Pull up following revision(s) (requested by nonaka in ticket #1519):

 	sys/arch/i386/stand/efiboot/eficons.c: revision 1.10
 	sys/arch/i386/stand/efiboot/eficons.c: revision 1.11

 If the default GOP mode is unavailable, fallback to the first mode defined.
 PR# port-amd64/55000

 Remove check for bestmode==-1 (shouldn't happen)


 To generate a diff of this commit:
 cvs rdiff -u -r1.4.2.5 -r1.4.2.6 src/sys/arch/i386/stand/efiboot/eficons.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: needs-pullups->closed
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Wed, 18 Mar 2020 17:38:39 +0000
State-Changed-Why:
Pullup complete.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.