If the default GOP mode is unavailable, fallback to the first mode defined. PR# port-amd64/55000